<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OptionActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar_layout">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aboutImageIcon"
                android:src="@drawable/ic_add_alert"
                android:background="#000"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"
                android:textColor="#000"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mAbout"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textColor="#333"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray_200"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_start"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="16sp"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/gray_200"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_priority"
                    android:layout_marginTop="5dp"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="16sp"
                    android:id="@+id/tvp"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvp"
                    android:id="@+id/tbOne">
                    <TableRow
                        android:padding="5dp">
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="50dp"
                            android:src="@drawable/priority_rect_low"
                            android:id="@+id/ivLow"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_priority_low"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow
                        android:padding="5dp">
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="50dp"
                            android:src="@drawable/priority_rect_normal"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_priority_normal"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15sp"/>
                    </TableRow>
                    <TableRow
                        android:padding="5dp">
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="50dp"
                            android:src="@drawable/priority_rect_high"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_priority_high"
                            android:layout_marginLeft="5dp"
                            android:padding="10dp"
                            android:textColor="#000"
                            android:textSize="15sp"/>
                    </TableRow>
                </TableLayout>
            </RelativeLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>